Fix layout issues on smaller screens

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -17,6 +17,10 @@
 @media screen and (max-width: 460px) {
   .footer {
     flex-direction: column;
+    margin-top: $default-spacing;
+    a {
+      margin: $default-spacing 0;
+    }
     .button {
       box-shadow: none;
     }
