--- a/src/components/Pools/Pools.scss
+++ b/src/components/Pools/Pools.scss
@@ -22,4 +22,8 @@
   .pools-container {
     flex-direction: column;
   }
+
+  .pools-container {
+    margin: 0;
+  }
 }
