--- a/src/components/WalletList/WalletList.scss
+++ b/src/components/WalletList/WalletList.scss
@@ -16,8 +16,10 @@
 
 .wallet-list-account {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .wallet-list-currency {
